Bug 494194 - Konversation does not show any icon in the systray on Linux Mint Cinnamon edition
Summary: Konversation does not show any icon in the systray on Linux Mint Cinnamon edi...
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: notifications (other bugs)
Version First Reported In: 1.10.24081
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-06 05:04 UTC by spider
Modified: 2024-11-03 01:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.08.2
Sentry Crash Report:


Attachments
preferences screenshot (102.49 KB, image/png)
2024-10-06 05:04 UTC, spider
Details

Note You need to log in before you can comment on or make changes to this bug.
Description spider 2024-10-06 05:04:53 UTC
Created attachment 174474 [details]
preferences screenshot

SUMMARY
Konversation does not show any icon in the system notification area. The app itself works as expected. The icon will not show for either running in foregound or backgound. I've checked all the boxes in the preferences needed for it. 

The app is a flatpak, installed from flathub.

STEPS TO REPRODUCE
1. Open konversation form the mint menu
2. The app opens and works
3. Close the window to minimize in the background
4. The app doesn't show in the systray, open the app again from the menu and the window is back as before

OBSERVED RESULT
systray doesn't show konversation icon.

EXPECTED RESULT
Interactable systray icon should appear.

SOFTWARE/OS VERSIONS
Linux:  Linux Mint Cinnamon 22

ADDITIONAL INFORMATION
flatpak run org.kde.konversation -v
Gtk-Message: 10:58:07.625: Failed to load module "xapp-gtk3-module"
Qt: Session management error: Could not open network socket
konversation 1.10.24081
Comment 1 argonel 2024-10-06 06:44:17 UTC
Git commit c7abff20670b41c163c969287643e4832ff80255 by Eli MacKenzie.
Committed on 06/10/2024 at 06:29.
Pushed by argonel into branch 'master'.

Set tray icon to active when the window is closed

Some tray implementations will only show "Active" or "Needs Attention"
tray icons, and offer no means of configuration. The tray icon will now
be set to "Active" when the window is closed and the tray icon is
enabled, which will also cause Plasma's tray to show the icon when it
is set to "Shown when relevant".

M  +1    -0    src/viewer/trayicon.cpp

https://invent.kde.org/network/konversation/-/commit/c7abff20670b41c163c969287643e4832ff80255
Comment 2 argonel 2024-10-06 17:00:51 UTC
Git commit 3ddf11db496b237620e063b2a4be272479e66a8e by Eli MacKenzie.
Committed on 06/10/2024 at 06:38.
Pushed by argonel into branch 'release/24.08'.

Set tray icon to active when the window is closed

Some tray implementations will only show "Active" or "Needs Attention"
tray icons, and offer no means of configuration. The tray icon will now
be set to "Active" when the window is closed and the tray icon is
enabled, which will also cause Plasma's tray to show the icon when it
is set to "Shown when relevant".

M  +1    -0    src/viewer/trayicon.cpp

https://invent.kde.org/network/konversation/-/commit/3ddf11db496b237620e063b2a4be272479e66a8e
Comment 3 argonel 2024-11-03 01:08:16 UTC
Git commit 8cbc050b575b0cf81efc61cd39234ccf4203466f by Eli MacKenzie.
Committed on 03/11/2024 at 01:01.
Pushed by argonel into branch 'master'.

Tray icon activation now optional

The tray icon only needs to become active on systems that don't
support accessing tray icons that aren't "relevant". This setting
could be set to true by default in packaging for such systems.

M  +10   -0    src/config/generalbehavior_configui.ui
M  +4    -0    src/config/konversation.kcfg
M  +2    -1    src/viewer/trayicon.cpp

https://invent.kde.org/network/konversation/-/commit/8cbc050b575b0cf81efc61cd39234ccf4203466f